DateInputException added parameter and usage work app service

--- a/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/tr.json
+++ b/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/tr.json
@@ -243,6 +243,7 @@
     "InternManagement:10": "Aynı isimde bir dosya zaten mevcut: {name}",
     "InternManagement:11": "Dosya bulunamadı, dosya adını kontrol edin: {name}",
     "InternManagement:12": "Bitiş tarihi başlangıç tarihinden önce olamaz.",
-    "InternManagement:13": "{input} sadece sayı içermelidir"
+    "InternManagement:13": "{input} sadece sayı içermelidir",
+    "InternManagement:14": "Girilen tarih stajyerin staj sürecini kapsamıyor. Girdiğiniz tarih : {input}"
   }
 }
