--- a/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
+++ b/src/Pusula.InternManagement.Domain.Shared/Localization/InternManagement/en.json
@@ -243,6 +243,7 @@
     "InternManagement:10": "There is already a file with the same name: {name}",
     "InternManagement:11": "File not found, check filename: {name}",
     "InternManagement:12": "End date cannot be before the start date.",
-    "InternManagement:13": "{input} should only contain numbers."
+    "InternManagement:13": "{input} should only contain numbers.",
+    "InternManagement:14": "The entered date does not include the internship period. Your input : {input}"
   }
 }
